samples/_failures_safe/1761071781_82e2af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_525a9cb2.c: In function ‘main’:
./samples/SAFE/__tmp_525a9cb2.c:145:9: error: expected declaration or statement at end of input
  145 |         }
      |         ^
./samples/SAFE/__tmp_525a9cb2.c:145:9: error: expected declaration or statement at end of input
